# HEYEE-AGENT

./: .env.example  .gitignore  pyproject.toml
agent_service/: __init__.py  main.py
agent_service/api/: chat.py  health.py  knowledge.py  knowledge_chunk_dev.py
agent_service/consumers/: knowledge_chunk_consumer.py  rocketmq_knowledge_chunk_consumer.py  run_knowledge_chunk_consumer.py
agent_service/core/: config.py  errors.py  logging.py
agent_service/db/: session.py
agent_service/harness/: runner.py
agent_service/infra_ai/: __init__.py  clients.py  config.py  health_store.py  models.py  routing_executor.py  selector.py  url_resolver.py
agent_service/mcp/: __init__.py  adapter.py  contracts.py  http_client.py
agent_service/memory/: __init__.py  history_builder.py
agent_service/middleware/: upload_rate_limit.py
agent_service/rag/: __init__.py  retriever.py  schemas.py
agent_service/repositories/: knowledge_chunk_repository.py  knowledge_repository.py
agent_service/schemas/: chat.py  chunking.py  (+2 more)
frontend/: chat.html  knowledge-base.html  knowledge-documents.html  knowledge-upload.html
scripts/: deploy-linux.sh
sql/: 20260628_add_chunk_log_message_id.sql  20260628_create_knowledge_vector.sql
tests/: conftest.py  test_chat_api.py  test_chunking_service.py  test_frontend.py  test_function_call.py  test_health.py  test_infra_ai.py  test_knowledge_chunk_pipeline.py  test_knowledge_document_management.py  test_knowledge_upload.py  test_mcp_adapter.py  test_mcp_http_client.py  test_prompt_service.py  test_react_loop.py  test_upload_rate_limit.py
(+18 files in other folders)
